顶部导航栏自定义中

--- a/src/assets/css/rest.css
+++ b/src/assets/css/rest.css
@@ -10,7 +10,7 @@ audio, video {
   padding:0;
   border:0;
   outline:0;
-  font-size:14px;
+  font-size:100%;
   vertical-align:baseline;
   background:transparent;
   outline-style:none;/*FF*/
